Form submit button and fixed overflowed input field

--- a/Crash Course 2020 - Design Course/css/style.css
+++ b/Crash Course 2020 - Design Course/css/style.css
@@ -76,6 +76,7 @@ input[type="text"] {
   padding: 1em;
   border-radius: 0.5em;
   margin-top: 1.2em;
+  box-sizing: border-box;
 }
 
 .form-container p {
@@ -84,4 +85,20 @@ input[type="text"] {
   font-weight: normal;
   font-size: 0.9em;
   margin-top: 0.3em;
+}
+
+input[type="button"] {
+  background-color: #f89104;
+  border: none;
+  width: 100%;
+  color: white;
+  font-weight: bold;
+  padding: 1em 0;
+  border-radius: 0.5em;
+  font-size: 1.3em;
+  cursor: pointer;
+}
+
+input[type="button"]:hover {
+  background-color: rgb(216, 126, 1);
 }
